--- a/src/index.css
+++ b/src/index.css
@@ -44,14 +44,18 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em 1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
+
 button:hover {
   border-color: #f5babe;
 }
