--- a/src/page/Search.css
+++ b/src/page/Search.css
@@ -6,11 +6,13 @@
     height: 100%;
     margin-top: 58px;
 }
-
+.search-main {
+    background-color: #f35a04;
+}
 .search-content {
     display: flex;
     height: 100vh;
-    padding: 3% 5% 0% 5%;
+    padding: 3% 5% 5% 5%;
     margin-left: 50%;
     flex-direction: column;
     justify-content: flex-start;
@@ -35,6 +37,7 @@
     margin-left: 2em;
     height: 30px;
     padding: 3px 10px;
+    font-size: medium;
 }
 .FullSearch h4{
     margin-block-end: 0em;
@@ -58,6 +61,9 @@
 label{
     display: flex;
     justify-content: center;
+}
+.resultOfSearch{
+    margin: 0 1.875rem 3.625rem 1.875rem;
 }
 
 .petStatus{
