--- a/src/components/PetCard.css
+++ b/src/components/PetCard.css
@@ -39,3 +39,11 @@ display: flex;
     align-items: center;
     margin-top: 10px;
 }
+.Form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    border: 1px solid #000;
+    padding: 12px;
+}
