--- a/src/page/Profile.css
+++ b/src/page/Profile.css
@@ -13,6 +13,10 @@
     height: 100%; 
     object-fit: cover; 
 }
+.progileTable h4 {
+    margin-block-end: 0.35rem !important;
+    margin-block-start: 0.33em !important;
+}
 .profile-content {
     display: flex;
     height: 100vh;
