--- a/src/page/Search.css
+++ b/src/page/Search.css
@@ -9,6 +9,11 @@
 /* .search-main {
     background-color: #f35a04;
 } */
+.search-main {
+    overflow-y: auto; 
+    width: 100vw;
+    height: 100%;
+}
 .search-content {
     display: flex;
     height: 100vh;
