--- a/src/page/Profile.css
+++ b/src/page/Profile.css
@@ -43,6 +43,7 @@
     margin-left: 2em;
     height: 30px;
     padding: 3px 10px;
+    font-size: 14px;
 }
 .progileTable h4{
     margin-block-end: 0em;
