--- a/src/Elements/Usefull/SaveMassage.css
+++ b/src/Elements/Usefull/SaveMassage.css
@@ -23,5 +23,9 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
+  }
+  .message-content button{
+    width: 100px;
   }
   
