--- a/src/components/PetCard.css
+++ b/src/components/PetCard.css
@@ -1,20 +1,23 @@
 .Card {
     background-color: #f1e0cae3;
-    border: 1px solid #e48152; 
+    border: 1px solid #e48152;
     border-radius: 24px;
     padding: 20px;
     box-shadow: 16px 16px 17px rgba(0, 0, 0, 0.3);
 }
-.Card button{
+
+.Card button {
     background-color: #d98e6c;
 }
+
 .Container {
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: 0.65rem;
 }
-.CardImg{
+
+.CardImg {
     width: 100%;
     height: 11.25rem;
     margin-bottom: 0.625rem;
@@ -22,28 +25,33 @@
     border-radius: 24px;
     border: #e19370 1px solid;
 }
-.CardText h5{
+
+.CardText h5 {
     margin-block-start: 0rem;
     margin-block-end: 0.45rem;
-    
+
 }
-.CardTitle h4{
+
+.CardTitle h4 {
     margin-block-start: 0rem;
     margin-block-end: 0.45rem;
-    
+
 }
-.CardText{
-display: flex;
+
+.CardText {
+    display: flex;
     padding-left: 15px;
     flex-direction: column;
     align-items: flex-start;
 }
+
 .IconCard {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 20px;
 }
+
 .Form {
     display: flex;
     flex-direction: column;
@@ -51,4 +59,16 @@ display: flex;
     justify-content: center;
     border: 1px solid #000;
     padding: 12px;
+}
+
+.activeIcon {
+    border: 2px solid #d98e6c;
+    padding: 5px;
+    border-radius: 24px;
+    color: white;
+    background-color: #d98e6c;
+}
+
+.defaultIcon {
+    padding: 5px;
 }
