--- a/src/page/Search.css
+++ b/src/page/Search.css
@@ -11,6 +11,7 @@
     overflow-y: auto; 
     width: 100vw;
     height: 100%;
+    background-color: #9b8cad;
 }
 .search-content {
     display: flex;
@@ -68,6 +69,7 @@ label{
 
 .resultOfSearch{
     margin: 0 1.875rem 2.55rem 1.875rem;
+    padding-bottom: 50px;
 }
 
 .petStatus{
@@ -82,4 +84,11 @@ label{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+}
+select {
+    width: 219px;
+    margin-left: 2em;
+    height: 40px;
+    padding: 3px 10px;
+    font-size: medium;
 }
