--- a/src/page/Dashbord.css
+++ b/src/page/Dashbord.css
@@ -67,6 +67,9 @@ td {
 tr {
     line-height: 3.5;
 }
+tr:hover{
+    background-color: #8aa7a45c;
+}
 
 td,
 th {
@@ -105,7 +108,7 @@ table {
     margin-block-end: 2em;
 }
   .ReactModal__Overlay, .ReactModal__Overlay--after-open {
-    background-color:rgb(153 151 150 / 8%)!important;
+    background-color:rgb(153 151 150 / 50%)!important;
 }
 .ReactModal__Overlay {
     display: flex;
@@ -122,6 +125,10 @@ table {
     border-radius: 4px;
     outline: none;
     padding: 5px !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px !important;
 }
 .Form label {
     margin: 4px 0;
