--- a/src/page/MyPets.css
+++ b/src/page/MyPets.css
@@ -36,3 +36,12 @@ font-size: 2.2em;
     display: flex;
     justify-content: center;
 }
+.noPetsResult a{
+    color: white;
+    text-decoration: none;
+}
+.noPetsResult button{
+    background-color: #faa74f;
+    border: 1px solid #e76922b8;
+    height: 50px;
+}
