--- a/src/Elements/Usefull/SaveMassage.css
+++ b/src/Elements/Usefull/SaveMassage.css
@@ -30,9 +30,9 @@
     width: 100px;
     font-size: medium;
   }
-  .message-content h4{
+  .message-content h3{
     font-weight: 300;
     margin-bottom: 20px;
-
+    font-size: 18px;
   }
   
